# nhs_number_generator

./: .coverage  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  Jenkinsfile  README.md  generate_nhs_numbers.py  pyproject.toml  test_generate_nhs_numbers.py
.github/workflows/: pre-commit.yml  unit-tests.yml
nhs_number_generator/: generate_nhs_numbers.py
tests/: .test_generate_nhs_numbers.py.swp  test_generate_nhs_numbers.py
