[tool.poetry]
name = "nhs-number-generator"
version = "1.0.0"
description = ""
authors = ["Iain <25081046+Iain-S@users.noreply.github.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "nhs_number_generator"}]

[tool.poetry.dependencies]
python = "^2.7 || ^3.6"


[tool.isort]
profile = "black"

[tool.poetry.scripts]
nhs_number_generator = "nhs_number_generator.generate_nhs_numbers:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
